# openCV_for_android

20190701/Test1/app/: build.gradle
20190701/Test1/app/src/androidTest/java/com/example/textcode001/: ExampleInstrumentedTest.java
20190701/Test1/app/src/main/: AndroidManifest.xml
20190701/Test1/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
20190701/Test1/app/src/main/java/com/example/textcode001/: MainActivity.java
20190701/Test1/app/src/main/res/values/: strings.xml
20190701/Test1/app/src/test/java/com/example/textcode001/: ExampleUnitTest.java
20190701/Test1/gradle/wrapper/: gradle-wrapper.properties
